[tool.poetry]
name = "hrm-omero"
version = "0.1.0"
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "A connector between the Huygens Remote Manager (HRM) and OMERO."
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/imcf/hrm-omero"
repository = "https://github.com/imcf/hrm-omero"
keywords = ["hrm", "huygens", "omero", "openmicroscopy", "ome", "deconvolution"]

[tool.poetry.dependencies]
python = "^3.8"
omero-py = "^5.10.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdoc = "^7.4.0"
black = "^21.9b0"

[tool.poetry.scripts]
ome-hrm = "hrm_omero.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
