[tool.poetry]
name = "hrm-omero"
version = "0.4.0-dev1"
authors = [
    "Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>",
    "Felix Meyenhofer <felix.meyenhofer@unifr.ch>",
]
description = "A connector between the Huygens Remote Manager (HRM) and OMERO."
license = "GPLv3"
readme = "README.md"
homepage = "https://pypi.org/project/hrm-omero/"
repository = "https://github.com/imcf/hrm-omero"
documentation = "https://imcf.one/apidocs/hrm-omero/hrm_omero.html"
keywords = ["hrm", "huygens", "omero", "openmicroscopy", "ome", "deconvolution"]

[tool.poetry.dependencies]
python = "^3.6.2"
omero-py = "^5.9.0"
loguru = "^0.5.3"
beautifulsoup4 = "^4.10.0"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
# pdoc = "^7.4.0"
black = "^21.9b0"
pylint = "^2.11.0"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
ome-hrm = "hrm_omero.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
